# apollon4FEM_playwright

./: .gitignore  Dockerfile  README.md  docker-compose.yml  poetry.toml  pyproject.toml
poetry-playwright/: pyproject.toml
poetry-playwright/src/: confluence.py
poetry-playwright/src/activeMq/: __init__.py  activePage.py  input.py  login.py  queue.py
poetry-playwright/src/confluence/: login.py  startPage.py
poetryPlaywright/logs/: README.md
poetryPlaywright/src/FEM/petclinic/pages/: add_owner_page.py  find_owners_page.py  home_page.py  veterinarians_page.py
poetryPlaywright/src/FEM/petclinic/tests/: error.py  init_client.py  login.py  main_tests.py  owners.py  veterinarians.py
poetryPlaywright/src/activeMq/: __init__.py  activePage.py  dlq.py  logfile.py  login.py  main.py  properties-template.py  queue.py  queues.py
poetryPlaywright/src/activemq/: dlq.py  login.py  main.py  queues.py
poetryPlaywright/src/centraljira/: MyJira.py  create_ticket.py  properties-template.py
poetryPlaywright/src/confluence/: __init__.py  testPage.py
poetryPlaywright/src/pymsteams/: main.py
