[tool.poetry]
name = "apollon4fem-playwright"
version = "0.1.0"
description = ""
authors = ["FABI"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
playwright = "^1.40.0"
logging = "^0.4.9.6"
jira = "3.6.0"

[tool.poetry.scripts]
activeMQ = "activeMQ:activePage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
