[tool.poetry]
name = "poetry-playwright"
version = "0.1.0"
description = ""
authors = ["Frank Birkhofen <frank.birkhofen@telekom.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.2"
playwright = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
